# WEPP

./: .gitignore  .gitmodules  404.html  CMakeLists.txt  LICENSE  README.md  aberrant.tsv  abundance.r  add_sequences.sh  check_vcf_sam.py  cite.html  clades.tsv  contribution.html  extract_sequences_from_fasta.py  index.html  install.html  mask.bed  mkdocs.yml  mutations.tsv  new_samples.vcf  panman.capnp  quickstart.html  regression_abundance_estimate.py  rerun.sh  run.sh  sam.proto  stacked_area_chart.py  usage.html
.github/workflows/: ci.yml
SWAMPy_input/abundance/: abudance_generation.ipynb
SWAMPy_input/abundance/output/: my_vcf_samples_2021_dataset1.tsv  my_vcf_samples_2021_dataset2.tsv  my_vcf_samples_2023_dataset1.tsv
SWAMPy_input/fasta/: vcf_to_fasta  vcf_to_fasta.cpp
SWAMPy_input/fasta/output/: my_vcf_samples_2021_dataset1.fasta  my_vcf_samples_2021_dataset2.fasta  my_vcf_samples_2023_dataset1.fasta
alignment_pipeline/: bowtie2_pipeline.sh  bwa_pipeline.sh  calculate_alignment_rate.py  differences.txt  fasta_to_vcf  fasta_to_vcf.cpp  fasta_to_vcf.py  get_aligned_vcf.sh  local_alignment  local_alignment.cpp  my_vcf_reads_sample.vcf  new_alignment_positions.py  new_samples_out.vcf  run_pipeline.sh  samples_out.vcf  vcf_to_fasta  vcf_to_fasta.cpp  vcf_to_fasta.py  vcf_to_fastq.cpp
alignment_pipeline/Executables/: fasta_to_vcf  local_alignment  vcf_to_fastq
alignment_pipeline/Fastq_SWAMPy/: .gitignore  bowtie2_pipeline.sh  compare_vcfs.py  debug_output.txt  debug_wepp_vcf.py  fasta_to_vcf  fasta_to_vcf.cpp  fastq_pipeline.sh  fastq_to_fasta.py  freyja.depth  freyja.vcf  generate_freyja_files  generate_freyja_files.cpp  group_vcf  group_vcf.cpp  handle_duplicates.py  mutation_counts_grouped.txt  new_alignment_positions.py  new_vcf_generator.py  plot_mutation_counts.py  plotting_data.py  process_aligned_fasta.py  process_rc.py  process_sam.py  qual_score  qual_score.cpp  sam_to_vcf  sam_to_vcf.cpp  sam_to_vcf.py  sam_to_vcf_no_indels.py  sam_vcf_pipeline  sam_vcf_pipeline.cpp  sam_vcf_pipeline_2  sam_vcf_pipeline_2.cpp  sam_vcf_pipeline_full  sam_vcf_pipeline_full.cpp  sort_vcf  sort_vcf.cpp  test_vcf.py  vcf_to_fasta  (+1 more)
alignment_pipeline/Misc/: alignment_pipeline.sh  vcf_to_fastq
alignment_pipeline/Python/: fasta_to_vcf.py
alignment_pipeline/intermediate_files/: sample_names.txt
alignment_pipeline/intermediate_files/outputs/: output.bam  output.bam.bai  output.fasta  output.sam
config/: config.yaml
docker/: Dockerfile
docs/: cite.md  contribution.md  index.md  install.md  quickstart.md  usage.md
install/: environment.yml
primers/: Ion_AmpliSeq_SARS-CoV-2.2020323_Designed.bed  RSVA_all_primers_best_hits.bed  midnight.bed
scripts/: samples_to_prune.txt  treePrune.sh
scripts/amplicon/: amplicon_reads.fastq
search/: search_index.json
src/: .gitignore  Instrumentor.h  analyze_peaks.cpp  analyze_peaks.hpp  arena.cpp  arena.hpp  closest_peak_clustering.cpp  config.hpp  dataset.cpp  dataset.hpp  haplotype.hpp  initial_filter.cpp  initial_filter.hpp  ivar_correction.py  main.cpp  mutation.hpp  mutation_annotated_tree.cpp  mutation_annotated_tree.hpp  panman_bridge.cpp  panman_bridge.hpp  pipeline.cpp  pipeline.hpp  post_filter.cpp  post_filter.hpp  qc_preprocess.py  read.hpp  read_fasta_correction.py  sam2pb.cpp  sam2pb.hpp  sam_generation.py  select_subset_reads.py  timer.hpp  usher.cpp  usher_common.cpp  usher_graph.hpp  usher_mapper.cpp  usher_server.cpp  util.cpp  util.hpp  version.hpp.in
src/Freyja/: closest_peak_clustering.cpp  cwap_depth.tsv  cwap_variants.tsv  run.sh
src/Freyja/data/: usher_barcodes.csv
src/WBE/: align_mod.py  analyze_peaks.cpp  analyze_peaks.hpp  arena.cpp  arena.hpp  config.hpp  dataset.cpp  dataset.hpp  freyja_correct_format.py  haplotype.hpp  haplotype_abundance.py  haplotype_selection.cpp  helper_functions.cpp  initial_filter.cpp  initial_filter.hpp  ivar_correction.py  lineage_filtering.cpp  main.cpp  peak_detection.cpp  peaks_filtering.py  pipeline.cpp  pipeline.cpp_debug  pipeline.hpp  post_filter.cpp  post_filter.hpp  read.hpp  reads_coordinate_update.py  refine_peaks.cpp  sam2pb.cpp  sam2pb.hpp  sam2vcf.cpp  sam_generation.py  select_subset_reads.py  sub_sampling_reads.py  swampy_align.sh  util.cpp  util.hpp  variant_finder.cpp  variant_finder.hpp  wbe.hpp
src/WBE/Freyja/: closest_peak_clustering.cpp
src/WBE/pipeline/: pipeline.hpp
src/WEPP/: arena.cpp  arena.hpp  config.hpp  dataset.hpp  haplotype.hpp  initial_filter.cpp  initial_filter.hpp  ivar_correction.py  main.cpp  pipeline.cpp  pipeline.hpp  post_filter.cpp  post_filter.hpp  qc_preprocess.py  read.hpp  read_fasta_correction.py  sam2pb.cpp  sam_generation.py  swampy_align.sh  util.cpp  util.hpp
src/amplicon/: data_generation.cpp  data_generation.hpp  peak_search.cpp  peak_search.hpp
src/dashboard/dashboard/: nginx-react.conf
src/dashboard/dashboard/src/: assembly.jsx  rpcWorker.ts
src/dashboard/dashboard/src/utils/: uploadUtils.jsx
src/dashboard/taxonium_backend/: .gitignore  server.js
src/dashboard/taxonium_component/: package.json
src/matUtils/: common.hpp  describe.cpp  describe.hpp  experiment.cpp  experiment.cpp_bkp  experiment.hpp  experiment_optim.cpp  extract.cpp  haplotype_pruning.cpp  haplotype_pruning.hpp  main.cpp  post_processing.cpp  post_processing.hpp  select.cpp  select.hpp  translate.cpp
src/panman/: closest_peak_clustering.cpp  panman.cpp  panman.hpp
workflow/: Snakefile
workflow/envs/: cwap.yml  dashboard.yml  freyja.yml  qc.yml  wbe.yml  wepp.yml  wepp_linux.yml  wepp_osx.yml
workflow/rules/: cwap.smk  dashboard.smk  filter.smk  freyja.smk  preprocess.smk  qc.smk  sam2pb.smk  subsample.smk
workflow/scripts/: find_free_port.sh  install.sh  install_modified_freyja.py  sanitize_mat_newick.py  split_bams.sh
workflows/: Snakefile
workflows/rules/: initial_filter.smk  post_filter.smk  preprocess.smk  sam2pb.smk
